--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,20 @@
     "require": {
         "php": "^8.1",
         "symfony/http-client": "^6.1",
-        "symfony/http-foundation": "^6.1"
+        "symfony/http-foundation": "^6.1",
+        "gupalo/dateutils": "^1.13"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
-            "Playtini\\Keitaro\\": "src/"
+            "Playtini\\KeitaroClient\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Playtini\\Keitaro\\Tests\\": "tests/"
+            "Playtini\\KeitaroClient\\Tests\\": "tests/"
         }
     }
 }
