--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "symfony/http-client": "^6.1",
         "symfony/http-foundation": "^6.1",
         "gupalo/dateutils": "^1.13",
-        "psr/cache": "^3.0"
+        "psr/cache": "^3.0",
+        "gupalo/json": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
