--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ concurrency:
     cancel-in-progress: true
 jobs:
     test:
-        runs-on: self-hosted
+        runs-on: ubuntu-latest
         steps:
             -   name: checkout
                 uses: actions/checkout@v3.1.0
